@@ -1,5 +1,4 @@
 This code can be used freely for personal, academic, or non-commercial purposes.
 
-For commercial purposes, see the conditions formulated in file rngwell19937/src/WELL19937a.c
-and in the files rngwell19937/original_files/WELL19937a.*.
+For commercial purposes, see the conditions formulated in file rngwell19937/src/WELL19937a.c.
 
