@@ -1,18 +1,18 @@
-36a81d6683cbf9b162976ccea0f037a2 *ChangeLog
-f1485564358d32500a7141f602b5cca3 *DESCRIPTION
-481d4b9976cbfd5ccc627c4249839ff3 *LICENSE
+ee8959177ba2a77cae5e4e424e81bd0c *ChangeLog
+a9b27b85ad4f01677e84f5f41c19503d *DESCRIPTION
+6f69dc40cd037af0783d9554c178e94f *LICENSE
 14a517576c961bab0a4a6f4dc4ac4dee *NAMESPACE
 4ae2ec75579942a3565a093d7f1ce39d *R/init.R
 3dc2037a6737d1165f45d1e67e66914b *R/validate.R
-a658db3a139a7ed5a4603190f1231364 *man/rngwell19937-package.Rd
+8146476c930b556ec55de68db90cf0a0 *man/rngwell19937-package.Rd
 f8b5ba4e7a0b3af7981aa760c84f2f53 *man/set.initialization.Rd
-f7174445a433da934fcd4abfe6d3f01f *man/set.resolution.Rd
-889d38efba9cd9f66836f08936c45260 *man/set.vector.seed.Rd
+81d35e55b678ff3d8f4fe112edbbe0b7 *man/set.resolution.Rd
+24d74ed9d358a3a278c100209a757c6e *man/set.vector.seed.Rd
 a1d6e56906c9d31e98fe65f8ccaac3e6 *man/well19937.validate.Rd
-94efd3c18820070a63d0fceedf686d20 *original_files/MD5SUMS
-2a8f76d5ca7d1fc84b324ed62c9f1597 *original_files/WELL19937a.c
-6367ad1ac943e4af4411bb264a1235aa *original_files/WELL19937a.h
-5a844361e747dab85cb074c0bd8af227 *original_files/combmrg2.c
-de906d18c3369cef9f653c21e958c313 *src/WELL19937a.c
+c97e4cc8764ff3799200e17deda5968b *src/WELL19937a.c
 bdf396503f282fe88c0249e5f94f4053 *src/combmrg2.c
 f176a2c74ddd07382e63a6a46f6f2bab *src/interface.c
+94efd3c18820070a63d0fceedf686d20 *src/original_files/MD5SUMS
+2a8f76d5ca7d1fc84b324ed62c9f1597 *src/original_files/WELL19937a.c
+6367ad1ac943e4af4411bb264a1235aa *src/original_files/WELL19937a.h
+5a844361e747dab85cb074c0bd8af227 *src/original_files/combmrg2.c
