@@ -1,3 +1,5 @@
+2014-11-30  0.6-0  subdirectory orig_files moved to src
+                   improving and correcting the documentation
 2012-01-17  0.5-4  included NAMESPACE, update of the documentation
 2009-08-16  0.5-3  extended DESCRIPTION file
                    corrected ?set.vector.seed
